--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL = "https://ads.planetmedia.app"
-API_KEY= b2f16a0e-655a-4044-a5a8-973b9b9c30d7
+REACT_APP_BASE_URL = "https://ads.planetmedia.app"
+REACT_APP_API_KEY= b2f16a0e-655a-4044-a5a8-973b9b9c30d7
